# yac.vim

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md  build.zig  build.zig.zon  debug_auto_import.vim  debug_completion_response.vim  debug_diagnostics.sh  fix_lsp_communication.vim  pyproject.toml  test.sh  test_auto_import.rs  test_auto_import_comprehensive.vim  test_completion_demo.vim  test_completion_filter.vim  test_completion_trigger_analysis.vim  test_debug_analysis.vim  test_diag.rs  test_diagnostic_manual.sh  test_esc_fix.vim  test_file_open_fix.vim  test_file_search.vim  test_folding.sh  test_folding.vim  test_hashmap.rs  test_inlay_hints.rs  test_input_debug.vim  test_input_fix.vim  test_keyboard_input.vim  test_lsp_communication.vim  test_manual.vim  test_new_file_search.vim  test_notification.vim  test_real_time_diagnostics.sh  (+6 more)
.beads/: dolt-monitor.pid  dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.claude/: settings.json
.claude/rules/: debugging.md  platform.md  treesitter.md  vim-popup.md  zig-coroutine.md  zig-memory.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml  rust-ci.yml
.zed/: debug.json
autoload/yac/: client.vim  notify.vim  rpc.vim  util.vim
config/examples/: rust.toml
crates/lsp-bridge/: Cargo.toml  README.md
crates/lsp-bridge-test/: Cargo.toml
crates/lsp-bridge/src/: lib.rs  lsp_registry.rs  main.rs  msg.rs  path_manager.rs  transport.rs
crates/lsp-bridge/src/handlers/: call_hierarchy.rs  code_action.rs  common.rs  completion.rs  completion_resolve.rs  diagnostics.rs  did_change.rs  did_close.rs  did_save.rs  document_symbols.rs  execute_command.rs  file_open.rs  file_search.rs  folding_range.rs  goto.rs  goto_definition_notification.rs  hover.rs  inlay_hints.rs  mod.rs  notification.rs  references.rs  rename.rs  will_save.rs
crates/lsp-client/: Cargo.toml  README.md
crates/lsp-client/examples/: goto_definition.rs
crates/lsp-client/src/: lib.rs  mock.rs
crates/lsp-client/tests/: integration_tests.rs  unit_tests.rs
crates/vim/: Cargo.toml
crates/yac-server/: Cargo.toml
crates/yac-server/examples/: main.rs
crates/yac-server/src/: lib.rs  msg.rs  socket.rs  stdio.rs
crates/yac-server/src/msg/: decoder.rs  encoder.rs  id.rs  message.rs  mod.rs  notification.rs  request.rs  response.rs
docs/: README.md  api.md  architecture-evolution.md  architecture.md  configuration.md  development.md  integration-testing-plan.md  linus-persona.md  lsp-bridge-requirements.md  new-language-plugin.md  performance.md  protocol.md  vim-plugin-design.md
docs/CODEMAPS/: architecture.md  backend.md  dependencies.md  frontend.md
docs/plans/: 2026-02-19-picker-design.md  2026-02-19-picker-implementation.md  2026-02-19-refactor-daemon.md  2026-02-20-symbol-preview-design.md  2026-02-20-symbol-preview-implementation.md
languages/bash/: languages.json
languages/c/: languages.json
languages/cpp/: languages.json
languages/css/: languages.json
languages/go/: languages.json
languages/html/: languages.json
languages/javascript/: languages.json
languages/json/: languages.json
languages/lua/: languages.json
languages/markdown/: languages.json
languages/markdown_inline/: languages.json
languages/python/: languages.json
languages/rust/: languages.json
languages/toml/: languages.json
languages/typescript/: languages.json
languages/vim/: languages.json
languages/yaml/: languages.json
languages/zig/: languages.json
plugin/: yac.vim
scripts/: check-capture-coverage.sh  install.sh  pre-commit  setup-hooks.sh  ssh_tunnel_manager.sh
src/: app.zig  clients.zig  compat.zig  daemon.zig  dap_bridge.zig  event_loop.zig  handler.zig  handlers.zig  json_utils.zig  lib.rs  line_framer.zig  log.zig  lsp.zig  lsp_bridge.zig  lsp_client.zig  lsp_protocol.zig  lsp_registry.zig  lsp_transform.zig  main.rs  main.zig  message_dispatcher.zig  picker.zig  poll_set.zig  progress.zig  queue.zig  requests.zig  rpc.zig  transport.zig  vim.zig  vim_expr_tracker.zig  vim_protocol.zig  vim_server.zig  vim_transport.zig
src/bridge/: client.rs  correlation.rs  event.rs  mod.rs  server.rs
src/dap/: client.zig  config.zig  protocol.zig  session.zig  session_test.zig  types.zig
src/file/: manager.rs  mod.rs
src/handler/: completion.zig  copilot.zig  debug.zig  editing.zig  file.zig  folding.zig  highlights.zig  lsp_context.zig  navigation.zig  picker.zig  symbols.zig  system.zig  textobjects.zig  transforms.zig  types.zig
src/handlers/: common.zig  completion.rs  copilot.zig  dap.zig  definition.rs  hover.rs  lsp_editing.zig  lsp_info.zig  lsp_navigation.zig  lsp_notifications.zig  lsp_requests.zig  mod.rs  picker.zig  treesitter.zig
src/lsp/: client.rs  client.zig  config.zig  context.zig  copilot.zig  jsonrpc.rs  lsp.zig  message.rs  mod.rs  path_utils.zig  protocol.rs  protocol.zig  registry.zig  server.rs  transform.zig  transform_completion.zig  transform_navigation.zig  transform_semantic_tokens.zig  transform_symbols.zig  types.zig  vim_types.zig
src/server/: dispatcher.zig  event_loop.zig  handler.zig  line_framer.zig  rpc_module.zig  server.zig  vim_protocol.zig  vim_server.zig
src/treesitter/: document_highlight.zig  folds.zig  highlights.zig  hover_highlight.zig  hover_highlight_test.zig  lang_config.zig  markdown_parser.zig  navigate.zig  predicates.zig  queries.zig  symbols.zig  textobjects.zig  treesitter.zig  wasm_loader.zig
src/utils/: config.rs  error.rs  mod.rs  security.rs  workspace.rs
test_data/: Cargo.toml
test_data/src/: lib.rs
tests/: completion_flow_test.rs  completion_integration_test.py  conftest.py  init.vim  protocol_test.rs  run_e2e.py  server_test.rs  test_conftest.py  test_e2e.py
tests/config/: completion_omnifunc_test.vimrc  goto_definition_test.vimrc  test.vimrc  test_config.toml
themes/: catppuccin-mocha.json  gruvbox-dark.json  one-dark.json  tokyo-night.json
yacd/: build.zig  build.zig.zon
yacd/src/: app.zig  (+9 more)
(+271 files in other folders)
