[workspace]
members = ["crates/lsp-client", "crates/lsp-bridge", "crates/vim", "test_data"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LSP Bridge Team"]
license = "MIT"

[workspace.dependencies]
# Internal dependencies
lsp-client = { path = "crates/lsp-client" }
vim = { path = "crates/vim" }

# External dependencies
lsp-types = "0.94"
tokio = { version = "1.35", features = ["full"] }
tokio-test = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
