[project]
name = "yac-tests"
version = "0.0.1"
description = "YAC.vim test suite"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
]

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
