[package]
name = "lsp-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lsp-bridge"
path = "src/main.rs"


[dependencies]
lsp-client = { path = "../lsp-client" }
vim = { path = "../vim" }
lsp-types = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"