[package]
name = "lsp-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "lsp-bridge"
path = "src/main.rs"

[dependencies]
lsp-client.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vim.workspace = true
async-trait.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio-test.workspace = true