[package]
name = "lsp-client"
version = "0.1.0"
edition = "2021"
authors = ["LSP Bridge Team"]
description = "LSP client implementation with protocol type support"
license = "MIT"

[dependencies]
# LSP protocol types
lsp-types = "0.94"

# Async runtime
tokio = { version = "1.35", features = ["full", "process"] }

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

# Networking and IO
bytes = "1.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
tracing-subscriber = "0.3"

[[example]]
name = "goto_definition"
required-features = []
