[package]
name = "lsp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LSP client implementation with protocol type support"

[dependencies]
# LSP protocol types
lsp-types.workspace = true

# Async runtime
tokio = { workspace = true, features = ["process"] }

# JSON and serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }

# Networking and IO
bytes.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "goto_definition"
required-features = []
